src/tests/snapshots/gitu__tests__mouse_show_ignore_empty_region.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Stashes                                                                        |
▌stash@0 On main: firststash                                                    |
                                                                                |
 Recent commits                                                                 |
 cd4d2d1 main add testfile                                       Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 3710357229f60706
