src/tests/snapshots/gitu__tests__mouse_show_item.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 commit cd4d2d1f83bf459ce16bd9dbc873ebceac849283                                |
 Author: Author Name <author@email.com>                                         |
 Date:   Fri, 16 Feb 2024 11:11:00 +0100                                        |
                                                                                |
     add testfile                                                               |
                                                                                |
     Commit body goes here                                                      |
                                                                                |
 added      testfile                                                            |
▌@@ -0,0 +1,2 @@                                                                |
▌+testing                                                                       |
▌+testtest                                                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 1d4ae1b59e628f73
