src/tests/snapshots/gitu__tests__mouse_toggle_selected_item.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
▌modified   testfile                                                            |
▌@@ -1,2 +1,2 @@                                                                |
▌-testing                                                                       |
▌-testtest                                                                      |
▌+test                                                                          |
▌+moretest                                                                      |
                                                                                |
 Recent commits                                                                 |
 cd4d2d1 main add testfile                                       Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 51b6aec06d616ab1
