src/tests/snapshots/gitu__tests__mouse_wheel_scroll_up.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 modified   file14…                                                             |
 modified   file15…                                                             |
 modified   file16…                                                             |
 modified   file17…                                                             |
 modified   file18…                                                             |
 modified   file19…                                                             |
 modified   file20…                                                             |
 modified   file21…                                                             |
 modified   file22…                                                             |
 modified   file23…                                                             |
 modified   file24…                                                             |
 modified   file25…                                                             |
 modified   file26…                                                             |
 modified   file27…                                                             |
 modified   file28…                                                             |
 modified   file29…                                                             |
 modified   file30…                                                             |
                                                                                |
 Recent commits                                                                 |
 ae744cc main add file30                                         Author Name __ |
styles_hash: 4f2f62ac350724c1
