src/tests/snapshots/gitu__tests__moved_file.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Staged changes (1)                                                             |
 renamed    new-file -> moved-file…                                             |
                                                                                |
 Recent commits                                                                 |
 46c81ca main add new-file                                       Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: ef98d30186a29009
