src/tests/snapshots/gitu__tests__non_ascii_filename.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
▌modified   höhöhö                                                              |
▌@@ -1 +1 @@                                                                    |
▌-hehehe                                                                        |
▌+hahaha                                                                        |
                                                                                |
 Recent commits                                                                 |
 8efa733 main add höhöhö                                                        |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: ab172fef81cd0c1b
