src/tests/snapshots/gitu__tests__pull.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 _______ main origin/main add remote-file                                       |
 _______ add initial-file                                                       |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git pull                                                                      |
From                                                                            |
   _______.._______  main       -> origin/main                                  |
Updating _______.._______                                                       |
Fast-forward                                                                    |
 remote-file | 1 +                                                              |
 1 file changed, 1 insertion(+)                                                 |
 create mode 100644 remote-file                                                 |
styles_hash: fe1a0f5d15268e04
